force-app/main/default/objects/Expense__c/fields/Expense_Month__c.field-meta.xml
<CustomField>
    <fullName>Expense_Month__c</fullName>
    <label>Expense Month</label>
    <type>Date</type>
</CustomField>