force-app/main/default/objects/Expense__c/fields/Expense_Month_Key__c.field-meta.xml
<CustomField>
    <fullName>Expense_Month_Key__c</fullName>
    <formula>TEXT(YEAR( Expense_Month__c )) &amp; &quot;-&quot; &amp;
LPAD(TEXT(MONTH( Expense_Month__c )), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Month Key</label>
    <type>Text</type>
</CustomField>