force-app/main/default/objects/Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>IT Infra</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>