force-app/main/default/objects/Expense__c/fields/Paid_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Paid_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>